[project]
name = "opengl_image_process_util"
version = "0.1.0"
description = "OpenGL Image Processing Utility in Python"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "moderngl>=5.12.0",
    "numpy>=2.2.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "ruff>=0.9.10",
]

[tool.ruff]
line-length = 119

[tool.ruff.lint]
extend-select = ["I", "N"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
